Implementação do middlewares
